# Lattice

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml
crates/bridge-queue-redis/: Cargo.toml
crates/bridge-queue-redis/src/: lib.rs
crates/cap-do-workers/: Cargo.toml
crates/cap-do-workers/src/: lib.rs
crates/cap-do-workers/workerd-tests/: Cargo.toml  package-lock.json  package.json  wrangler.toml
crates/cap-do-workers/workerd-tests/src/: index.test.ts  lib.rs
crates/cap-http-workers/: Cargo.toml
crates/cap-http-workers/workerd-tests/: Cargo.toml
crates/cap-kv-opendal/: Cargo.toml
crates/cap-kv-opendal/src/: lib.rs
crates/cap-kv-workers/: Cargo.toml
crates/cap-kv-workers/src/: lib.rs
crates/cap-kv-workers/workerd-tests/: Cargo.toml  package-lock.json  package.json  wrangler.toml
crates/cap-kv-workers/workerd-tests/src/: index.test.ts  lib.rs
crates/capabilities/: Cargo.toml
crates/capabilities/src/: durability.rs  lib.rs  wasm_transport.rs
crates/cli/: Cargo.toml
crates/cli/src/: bundle.rs  local_durability.rs  main.rs  resume.rs
crates/cli/tests/: bindings_lock.rs  bundle.rs  resume.rs  run_local.rs  serve.rs
crates/dag-core/: Cargo.toml
crates/dag-core/src/: builder.rs  diagnostics.rs  flow_registry.rs  ir.rs  lib.rs  schema.rs
crates/dag-core/tests/: flow_ir_transform.rs  flow_registry.rs
crates/dag-macros/: Cargo.toml
crates/dag-macros/src/: lib.rs
crates/dag-macros/tests/: flow_macro.rs  flow_registry.rs  node_defaults.rs  node_hints.rs  node_trigger_shorthand.rs  trybuild.rs  workflow_edge_controls.rs  workflow_if.rs  workflow_switch.rs  workflow_timeout.rs
crates/dag-macros/tests/ui/: flow_bundle_host_gated.rs  node_blob_determinism_conflict.rs  node_db_effect_conflict.rs  node_determinism_hint_conflict.rs  node_effect_hint_conflict.rs  node_effect_hint_conflict.stderr  node_invalid_effect.rs  node_invalid_effect.stderr  node_missing_metadata.rs  node_missing_metadata.stderr  node_missing_name.rs  node_queue_effect_conflict.rs  workflow_buffer_duplicate.rs  workflow_buffer_duplicate.stderr  workflow_buffer_invalid_key.rs  workflow_buffer_invalid_key.stderr  workflow_buffer_max_items_string.rs  workflow_buffer_max_items_string.stderr  workflow_buffer_missing_edge.rs  workflow_buffer_missing_edge.stderr  workflow_connect_requires_into.rs  workflow_connect_requires_into.stderr  workflow_connect_requires_typed_binding.rs  workflow_connect_requires_typed_binding.stderr  workflow_delivery_duplicate.rs  workflow_delivery_duplicate.stderr  workflow_delivery_invalid_mode.rs  workflow_delivery_invalid_mode.stderr  workflow_delivery_missing_edge.rs  workflow_delivery_missing_edge.stderr  workflow_delivery_mode_string.rs  workflow_delivery_mode_string.stderr  workflow_duplicate_alias.rs  workflow_duplicate_alias.stderr  workflow_if_duplicate_source.rs  workflow_if_duplicate_source.stderr  workflow_if_else_not_ident.rs  workflow_if_else_not_ident.stderr  workflow_if_invalid_key.rs  workflow_if_invalid_key.stderr  (+40 more)
crates/exporters/: Cargo.toml
crates/exporters/src/: bundle.rs  harness.rs  lib.rs
crates/exporters/tests/: bundle_export.rs  harness.rs
crates/flow-bundle/: Cargo.toml
crates/flow-bundle/src/: lib.rs
crates/flow-bundle/tests/: expanded_ir.rs  flow_ir_schema.rs  manifest_schema.rs
crates/host-inproc/: Cargo.toml
crates/host-inproc/src/: lib.rs
crates/host-wasmtime/: Cargo.toml
crates/host-wasmtime/src/: lib.rs  main.rs
crates/host-web-axum/src/: lib.rs
crates/host-workers/: Cargo.toml
crates/host-workers/src/: lib.rs
crates/host-workers/workerd-tests/: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  wrangler.toml
crates/host-workers/workerd-tests/src/: index.test.ts  lib.rs
crates/kernel-exec/: Cargo.toml
crates/kernel-exec/src/: durability.rs  lib.rs
crates/kernel-plan/src/: lib.rs
crates/kernel-plan/tests/: edge_transform.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: callback.rs  lib.rs  timer.rs
crates/testing-harness-idem/: Cargo.toml
examples/s1_echo/: Cargo.toml
examples/s1_echo/src/: lib.rs
examples/s2_site/: Cargo.toml
examples/s2_site/src/: lib.rs
examples/s3_branching/: Cargo.toml
examples/s3_branching/src/: lib.rs
examples/s4_preflight/: Cargo.toml
examples/s4_preflight/src/: lib.rs
examples/s5_unsupported_surface/: Cargo.toml
examples/s5_unsupported_surface/src/: lib.rs
examples/s6_spill/: Cargo.toml
examples/s6_spill/host/: Cargo.toml
examples/s6_spill/host/src/: lib.rs
examples/s6_spill/src/: lib.rs
examples/s7_cloudflare_idem/: Cargo.toml  README.md  wrangler.toml
examples/s7_cloudflare_idem/src/: lib.rs
examples/s7_cloudflare_idem/workerd-tests/: Cargo.toml  package-lock.json  package.json  tsconfig.json  wrangler.toml
examples/s7_cloudflare_idem/workerd-tests/src/: index.test.ts  lib.rs
impl-docs/: README.md  error-codes.md  error-taxonomy.md  user-stories.md  work-log.md
impl-docs/spec/: capabilities-and-binding.md  checkpointing-and-durability.md  connector-and-plugin-model.md  control-surfaces.md  credential-provider.md  flow-bundles-wasm.md  flow-ir.md  invocation-abi.md  stdlib-and-node-registry.md  subflows.md  workspace-capability.md
schemas/: flow_bundle.schema.json  flow_ir.schema.json
