[package]
name = "example-s6-spill"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "S6 example demonstrating buffer and spill behavior."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dag-core = { path = "../../crates/dag-core" }
dag-macros = { path = "../../crates/dag-macros" }
kernel-exec = { path = "../../crates/kernel-exec", optional = true }
kernel-plan = { path = "../../crates/kernel-plan" }
host-inproc = { path = "../../crates/host-inproc", optional = true }
capabilities = { path = "../../crates/capabilities" }
serde.workspace = true
serde_json.workspace = true
futures-timer.workspace = true

[features]
default = ["host-bundle"]
host-bundle = ["kernel-exec", "host-inproc"]
flow-registry = ["dag-core/flow-registry", "dag-macros/flow-registry"]

[package.metadata.latticeflow]
flows = ["s6_spill_flow"]
default_flow = "s6_spill_flow"
