[package]
name = "cap-kv-workers-test"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

# Standalone workspace - not part of parent workspace
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "=0.7.4", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Use cap-kv-workers from parent - path reference
cap-kv-workers = { path = ".." }
capabilities = { path = "../../capabilities" }
